docs/cuda_build_20251113_045426.txt
**********************************************************************
** Visual Studio 2019 Developer Command Prompt v16.0
** Copyright (c) 2021 Microsoft Corporation
**********************************************************************
[vcvarsall.bat] Environment initialized for: 'x64'
C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v13.0\include\curand_poisson.h(642): warning #20199-D: unrecognized #pragma in device code
      __pragma(warning(push)) __pragma(warning(disable:4996)) __pragma(nv_diagnostic push) __pragma(nv_diag_suppress 1444)
               ^

Remark: The warnings can be suppressed with "-diag-suppress <warning-number>"

C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v13.0\include\curand_poisson.h(642): warning #20199-D: unrecognized #pragma in device code
      __pragma(warning(push)) __pragma(warning(disable:4996)) __pragma(nv_diagnostic push) __pragma(nv_diag_suppress 1444)
                                       ^

C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v13.0\include\curand_poisson.h(644): warning #20199-D: unrecognized #pragma in device code
      __pragma(warning(pop)) __pragma(nv_diagnostic pop)
               ^

C:\Users\tmdru\Downloads\files\src\gpu\parallel_tempering.cu(140): warning #177-D: variable "d_edges" was declared but never referenced
          static int2 *d_edges = nullptr;
                       ^

parallel_tempering.cu
tmpxft_00005354_00000000-7_parallel_tempering.cudafe1.cpp
C:\Users\tmdru\Downloads\files\src\gpu\convergence.cu(300): error: expected an expression
                  .gelmanRubin = 2.0f,
                  ^

C:\Users\tmdru\Downloads\files\src\gpu\convergence.cu(301): error: expected an expression
                  .effectiveSampleSize = 1.0f,
                  ^

C:\Users\tmdru\Downloads\files\src\gpu\convergence.cu(302): error: expected an expression
                  .costStabilization = 1.0f,
                  ^

C:\Users\tmdru\Downloads\files\src\gpu\convergence.cu(303): error: expected an expression
                  .avgSwapAcceptance = 0.0f,
                  ^

C:\Users\tmdru\Downloads\files\src\gpu\convergence.cu(304): error: expected an expression
                  .iteration = iteration,
                  ^

C:\Users\tmdru\Downloads\files\src\gpu\convergence.cu(305): error: expected an expression
                  .hasConverged = false
                  ^

C:\Users\tmdru\Downloads\files\src\gpu\convergence.cu(352): error: __host__ or __device__ annotation on lambda requires --extended-lambda nvcc flag
          auto computeSwapAvg = [=] __declspec(__device__) () {
                                                           ^

C:\Users\tmdru\Downloads\files\src\gpu\convergence.cu(359): error: calling a __device__ function("_ZN11BlockReduceIL1?256EL1?32EE3sumE1?") from a __host__ function("operator()") is not allowed
              sum = BlockReduce<256>::sum(sum);
                    ^

C:\Users\tmdru\Downloads\files\src\gpu\convergence.cu(367): error: no suitable conversion function from "lambda []()->void" to "void (*)()" exists
          void (*swapKernel)() = computeSwapAvg;
                                 ^

9 errors detected in the compilation of "gpu/convergence.cu".
convergence.cu
